Fix background on mobile devices and small changes

--- a/style/styl1.css
+++ b/style/styl1.css
@@ -15,42 +15,6 @@
     }
 }
 
-@-webkit-keyframes MoveBG {
-    0% {
-        background-position:0% 84%
-    }
-    50% {
-        background-position:100% 16%
-    }
-    100% {
-        background-position:0% 84%
-    }
-}
-
-@-moz-keyframes MoveBG {
-    0% {
-        background-position:0% 84%
-    }
-    50% {
-        background-position:100% 16%
-    }
-    100% {
-        background-position:0% 84%
-    }
-}
-
-@-o-keyframes MoveBG {
-    0% {
-        background-position:0% 84%
-    }
-    50% {
-        background-position:100% 16%
-    }
-    100% {
-        background-position:0% 84%
-    }
-}
-
 @keyframes MoveBG {
     0% {
         background-position:0% 84%
@@ -65,24 +29,14 @@
 
 body {
     margin: 0;
-    height: 100vh;
-}
-
-.container {
-    min-width: 100%;
-    min-height: 100%;
     color: white;
     font-family: "Open Sans";
     background:linear-gradient(230deg,#4bc5cf,#4b79cf,#a24bcf);
     background-size:300% 300%;
-    -webkit-animation:MoveBG 60s ease infinite;
-    -moz-animation:MoveBG 60s ease infinite;
-    -o-animation:MoveBG 60s ease infinite;
     animation:MoveBG 60s ease infinite;
 }
 
-.container2 {
-    position: absolute;
+.container {
     animation: cd-scale-in .6s .3s both;
 }
 
